Revert "Fix wrong width on logo in detailed link card in web UI (#32271)"
This reverts commit 889edc560ae94b0663bab0e4cdb7cbad7e3cc6f8.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10635,7 +10635,6 @@ noscript {
   gap: 8px;
 
   .logo {
-    width: 16px;
     height: 16px;
     color: $darker-text-color;
   }
